<resources>
    <string name="app_name">Lesson 1</string>
    <string name="city_country">Saint Petersburg, Russia</string>
    <string name="mostly_sunny">Mostly sunny</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="saint_petersburg">Saint-Petersburg</string>
    <string name="moscow">Moscow</string>
    <string name="new_york">New York</string>
    <string name="Select_city">Select city</string>
    <string name="Add_city">Add city</string>
    <string name="show_wind_speed">Show wind speed</string>
    <string name="wind_speed">Wind speed</string>
    <string name="temperature">Temperature</string>
    <string name="weather">Weather</string>
    <string name="pressure">Pressure</string>
    <string name="settings">Settings</string>
    <string name="mmHg">mmHg</string>
    <string name="Pa">Pa</string>
    <string name="ms">m/s</string>
    <string name="kmh">km/h</string>
    <string name="weather_app">Weather App</string>
    <string name="done">Done</string>
    <string name="yandex_weather">Yandex weather</string>
    <string name="Error_city">Wrong city name</string>
    <string name="Dark_theme">Dark theme</string>
    <string name="Update">Update</string>
    <string name="Show_history">Show history</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="dialog_message">Connection failed!</string>
    <string name="dialog_message_2">Close app?</string>
    <string name="no_connection">No connection</string>
    <string name="low_battery">Low battery</string>
    <string name="Weather_in_current_location">Weather in current location</string>
    <string name="hot_weather">It is  extremely hot today, be careful!</string>
    <string name="cold_weather">It is  extremely cold today, be careful!</string>
    <string name="weather_warning">Weather warning</string>
    <string name="Sign_in">Sign in</string>
    <string name="Sign_out">Sign out</string>
    <string name="winter_img">https://images.unsplash.com/photo-1503517245364-78fc9a9cdd37?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=633&amp;q=80</string>
    <string name="autumn_img">https://images.unsplash.com/photo-1507629221898-576a56b530bb?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd&amp;auto=format&amp;fit=cro&amp;w=634&amp;q=80"</string>
    <string name="spring_img">https://images.unsplash.com/photo-1523224042829-4731dd15a3bb?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=634&amp;q=80</string>
    <string name="summer_img">https://images.unsplash.com/photo-1529923123842-3310dfdc0b10?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1350&amp;q=80</string>
</resources>